<resources>
    <string name="app_name">Get Movin\'</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="practice_exercises">Practice Exercises</string>
    <string name="introduction">Introduction</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum enim mauris, eget porta urna ullamcorper vitae. Vestibulum vestibulum enim mauris, eget porta urna ullamcorper vitae.</string>
    <string name="back_button">Back Button</string>
    <string name="app_logo">app logo</string>
    <string name="start_button">start button</string>
    <string name="achievements_button">Achievements Button</string>
    <string name="getmovin">GetMovin\'</string>
    <string name="completed_exercises_button">Completed Exercises</string>
    <string name="app_logo_homepage">app logo</string>
    <string name="achievements_text">Achievements</string>
    <string name="practice_exercises_button">Practice Exercises</string>
    <string name="how_to_use_the_app_button">How to use the app</string>
    <string name="achievements_textmain">"Achievements "</string>
    <string name="workout_1">Workout 1</string>
    <string name="workout_2">Workout 2</string>
    <string name="workout_4">Workout 4</string>
    <string name="completed_exercises">Completed Exercises</string>
    <string name="workout_3">Workout 3</string>
    <string name="start_video_again">Start video again</string>
    <string name="view_the_list_of_exercises_you_completed_this_week_below">View the list of exercises you completed this week below</string>
    <string name="you_re_doing_great">You\'re doing great!</string>
    <string name="help">Help</string>
</resources>