<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AchievmentsButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:padding="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    tools:context=".HomepageActivity">

    <TextView
        android:id="@+id/GetMovinLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/getmovin"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/practiceExercisesButton"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:onClick="onClickPracticeExercises"
        android:padding="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/practice_exercises_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="422dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/completedExercisesButton"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="14dp"
        android:background="@color/green"
        android:padding="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/completed_exercises_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/howToUseTheAppButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practiceExercisesButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/howToUseTheAppButton"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blue"
        android:padding="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/how_to_use_the_app_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/GetMovinLogo"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/app_logo_homepage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/GetMovinLogoText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="227dp"
        android:layout_height="199dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="7dp"
        android:background="@null"
        android:contentDescription="@string/achievements_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GetMovinLogoText"
        app:srcCompat="@drawable/achievments_icon"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/achievements_textmain"
        android:text="@string/achievements_text"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/practiceExercisesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>