<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#333333"
    android:orientation="vertical"
    tools:context=".CompletedExercises"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#333333">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pageTitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:contentDescription="@string/completed_exercises"
                android:shadowRadius="5"
                android:text="@string/completed_exercises"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/subPageLogo4"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/app_logo" />

            <ImageButton
                android:id="@+id/backButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/back_button"
                android:minHeight="48dp"
                android:layout_gravity="center"
                android:onClick="onClickBackToMain"
                android:src="@drawable/back_button" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/row_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/completed_exercises"
                android:orientation="vertical">
            </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
