<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".PracticeExercisesFragment">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/completed_exercises"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:minHeight="48dp"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toEndOf="@+id/pageTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageView
        android:id="@+id/subPageLogo"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/pageTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="115dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="411dp"
                android:layout_height="215dp"
                android:layout_marginTop="170dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtubePlayer1"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:videoId="xxzDtLqZBro">

                    </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

                    <TextView
                        android:id="@+id/videoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:text="@string/introduction"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/youtubePlayer1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/StartVideoAgain1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:contentDescription="@string/start_video_again"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/youtubePlayer1"
                        app:srcCompat="@drawable/start_again_button"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="411dp"
                android:layout_height="215dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/startVideoAgain2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@null"
                        android:contentDescription="@string/start_video_again"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/youtubePlayer2"
                        app:srcCompat="@drawable/start_again_button" />

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtubePlayer2"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:videoId="gO74v4VnfX4">

                    </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

                    <TextView
                        android:id="@+id/videoTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:text="@string/workout_1"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/youtubePlayer2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="411dp"
                android:layout_height="215dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/startVideoAgain3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@null"
                        android:contentDescription="@string/start_video_again"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/youtubePlayer3"
                        app:srcCompat="@drawable/start_again_button" />

                    <TextView
                        android:id="@+id/videoTitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:text="@string/workout_2"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/youtubePlayer3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtubePlayer3"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:videoId="4iugjk9AbN8">

                    </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="411dp"
                android:layout_height="215dp"
                android:layout_marginTop="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/startVideoAgain4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:contentDescription="@string/start_video_again"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/youtubePlayer4"
                        app:srcCompat="@drawable/start_again_button" />

                    <TextView
                        android:id="@+id/videoTitle4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="13dp"
                        android:text="@string/workout_3"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/youtubePlayer4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtubePlayer4"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:videoId="4iugjk9AbN8"
                        tools:ignore="MissingConstraints">

                    </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/you_re_doing_great"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/cardView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="302dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/view_the_list_of_exercises_you_completed_this_week_below"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/cardView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>